tekton/tekton-dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: tekton-dashboard-auth
spec:
  rules:
  - host: fyp-ernest.store
    http:
      paths:
      - path: /tekton(/|$)(.*)
        pathType: Prefix    
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
